# cadastro_django_mongo

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
cadastro/: models.py  tasks.py  urls.py  views.py
cadastro/templates/: cadastro.html
my_app/: settings.py
src/mongo/: __init__.py
