[tool.poetry]
name = "cadastro-django-mongo"
version = "0.1.0"
description = ""
authors = ["Thales Teodoro Ampere <thales@ampereconsultoria.com.br>"]
readme = "README.md"
packages = [{include = "cadastro_django_mongo"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.5"
celery = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
