[tool.poetry]
name = "cadastro-django-mongo"
version = "0.1.0"
description = ""
authors = ["Thales Teodoro Ampere <thales@ampereconsultoria.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.5"
celery = "^5.3.4"
termcolor = "^2.3.0"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
